...
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonJoinRoom"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/purple"

        android:text="Join Room"
        app:layout_constraintEnd_toStartOf="@+id/buttonLeaveRoom"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lobbyTitle" />

    <Button
        android:id="@+id/buttonLeaveRoom"
...
        app:layout_constraintBottom_toBottomOf="@+id/buttonChangeHost"
        app:layout_constraintEnd_toEndOf="@+id/buttonLeaveRoom"
        app:layout_constraintStart_toStartOf="@+id/buttonLeaveRoom"
        app:layout_constraintTop_toTopOf="@+id/buttonChangeHost" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
...
