...
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/roomSize"
        app:layout_constraintTop_toBottomOf="@+id/roomSize" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/aileron_bold"
        android:text="Join"
        app:layout_constraintBottom_toBottomOf="parent"
...
